[package]
authors = ["Jeroen Vervaeke <jeroen@vervaeke.nu>", "Jan Baudisch <dev@baudisch.xyz>"]
description = "A (very flexible) Rust implementation of Redux."
edition = "2018"
homepage = "https://github.com/redux-rs/redux-rs"
license = "MIT"
name = "redux-rs"
readme = "README.md"
repository = "https://github.com/redux-rs/redux-rs.git"
version = "0.1.0"

[badges]
codecov = { repository = "redux-rs/redux-rs" }
travis-ci = { repository = "redux-rs/redux-rs" }

[features]
default = ["std"]
std = []

[dependencies]
